// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated schema n = 0, n = 3 1`] = `
type Dummy0 {
  n: Int!
}

"""The root query type which gives access points into the data universe."""
type Query {
  dummy: Dummy0
}
`;

exports[`generated schema n = 0, n = 3 2`] = `
type Dummy3 {
  n: Int!
}

"""The root query type which gives access points into the data universe."""
type Query {
  dummy: Dummy3
}
`;
